# FrameGen

./: build.gradle  settings.gradle
.github/workflows/: build.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  egl_import.cpp  egl_import.h  framegen.cpp  gl_renderer.cpp  gl_renderer.h
app/src/main/java/com/framegen/app/: FloatingService.kt  FrameGenEngine.kt  MainActivity.kt  NativeBridge.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
